# platanus-hack-25-team-22

./: README.md  platanus-hack-project.json  project-description.md
tiqn-expo/: app.json  convexApi1763783357295.ts  eas.json  package-lock.json  package.json  sync-convex-api.sh
tiqn-expo/android/: settings.gradle
tiqn-expo/app/: _layout.tsx  index.tsx  modal.tsx  rescuer-map.tsx
tiqn-expo/convex/: api.ts
tiqn-expo/data/: mockData.ts
tiqn-expo/hooks/: useAgentConversation.ts  useHeading.ts  useLocation.ts
tiqn-expo/ios/: Podfile
tiqn-expo/services/: directionsService.ts  geocodingService.ts  patientRecordService.ts
tiqn-expo/utils/: mapHelpers.ts
tiqn-nextjs/: ONBOARDING.md  convexApi1763836943493.ts  convexApi1763836986791.ts  convexApi1763837552889.ts  package-lock.json  package.json  pnpm-lock.yaml
tiqn-nextjs/convex/: app_state.ts  calls.ts  dispatchers.ts  incidentAssignments.ts  incidents.ts  init.ts  known_patient_records.ts  patients.ts  rescuers.ts  schema.ts  seedTestData.ts  system.ts  tasks.ts  testCreateAssignment.ts  verification.ts
tiqn_backend/core_api/: .dockerignore  .gitignore  Dockerfile  QUICKSTART.md  README.md  entrypoint.sh  pyproject.toml  ruff.toml  run_dev.sh
tiqn_backend/core_api/src/: config.py  constants.py  core.py  main.py  schemas.py
tiqn_backend/core_api/src/healthcheck/: routes.py  service.py
tiqn_backend/core_api/src/routes/: simulation.py
tiqn_backend/core_api/src/services/: __init__.py  canonical.py  convex_db.py  session.py  transcription.py
tiqn_backend/core_api/src/twilio_stream/: routes.py
(+33 files in other folders)
